--- a/appClinics/templates/layout/header.html
+++ b/appClinics/templates/layout/header.html
@@ -1,23 +1,23 @@
-<div class="container">
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
-        <div class="container-fluid">
-            <ul class="navbar-nav">
-
+<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="javascript:void(0)">
+            <img src="https://www.popsockets.com/dw/image/v2/BFSM_PRD/on/demandware.static/-/Sites-popsockets-master-catalog/default/dwe2c701b7/images/hi-res/5-i7vuzMeHQppWgEYf-OMSFront1.png?sw=800&sh=800"
+                 alt="Avatar Logo" style="width:40px;" class="rounded-pill"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="mynavbar">
+            <ul class="navbar-nav me-auto">
                 <li class="nav-item">
-                    <a class="navbar-brand" href="#">
-                        <img src="https://www.popsockets.com/dw/image/v2/BFSM_PRD/on/demandware.static/-/Sites-popsockets-master-catalog/default/dwe2c701b7/images/hi-res/5-i7vuzMeHQppWgEYf-OMSFront1.png?sw=800&sh=800" alt="Avatar Logo" style="width:40px;" class="rounded-pill">
-                    </a>
+                    <a class="nav-link" href="/">Trang chủ</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Trang chủ</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Đăng ký khám</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Đăng nhập</a>
+                    <a class="nav-link" href="appointment">Đăng ký khám</a>
                 </li>
             </ul>
+            <form class="d-flex">
+                <button class="btn btn-primary" type="button">Đăng nhập</button>
+            </form>
         </div>
-    </nav>
-</div>
+    </div>
+</nav>
