--- a/appClinics/templates/layout/register.html
+++ b/appClinics/templates/layout/register.html
@@ -17,8 +17,8 @@
             </div>
         </form>
         {% else %}
-        <input type="text" class="form-control" id={{attr}} placeholder="Enter email" name="email" required>
-        <label for={{attr}}>{{attr}}</label>
+        <input type="text" class="form-control" id=user_{{attr}} placeholder="Enter email" name="email" required>
+        <label for=user_{{attr}}>{{attr}}</label>
         {% endif %}
 
     </div>
