--- a/appClinics/templates/layout/header.html
+++ b/appClinics/templates/layout/header.html
@@ -7,6 +7,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="mynavbar">
+
             <ul class="navbar-nav me-auto">
                 <li class="nav-item">
                     <a class="nav-link" href="/">Trang chủ</a>
@@ -14,10 +15,26 @@
                 <li class="nav-item">
                     <a class="nav-link" href="appointment">Đăng ký khám</a>
                 </li>
+
             </ul>
+            {% if current_user.is_authenticated %}
+            <div class="dropdown">
+                <button type="button" class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown">
+                    {{current_user.name}}
+                    <img src={{current_user.avatar}} class="rounded-circle " height="50" width="50">
+                </button>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="/logout">Log out</a></li>
+                    <li><a class="dropdown-item" href="#">Setting</a></li>
+                </ul>
+            </div>
+            {% else %}
             <form class="d-flex">
-                <button class="btn btn-primary" type="button">Đăng nhập</button>
+                <a href="login">
+                    <button class="btn btn-primary" type="button">Đăng nhập</button>
+                </a>
             </form>
+            {% endif %}
         </div>
     </div>
 </nav>
