--- a/appClinics/templates/index.html
+++ b/appClinics/templates/index.html
@@ -1,5 +1,60 @@
 {% extends 'layout/base.html' %}
 
 {% block content %}
+<div class="clinic1-img">
+    <img src="http://benhvientinh.quangtri.gov.vn/uploads/photos/images/2017/06/hinh-anh-benh-vien-tinh/img-4703.jpg">
+</div>
 
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-sm-4">
+            <div class="container-fluid ">
+                <h3 class="centerr">TIN TỨC MỚI</h3>
+                    <div class="container p-3 my-3 border">
+                        <img class="imgRow"
+                             src="https://xdcs.cdnchinhphu.vn/thumb_w/900/446259493575335936/2022/9/8/covid-19-16626080762101926255717-28-0-1028-1600-crop-16626086747651911446297.jpg">
+                        <p>Tình hình dịch covid ngày gia tăng khiến cho các bệnh viện tuyến tỉnh đến trung ương ngày cảng
+                            quá tải</p>
+                    </div>
+                <div class="container p-3 my-3 border">
+                    <img class="imgRow"
+                         src="https://xdcs.cdnchinhphu.vn/thumb_w/900/446259493575335936/2022/9/8/covid-19-16626080762101926255717-28-0-1028-1600-crop-16626086747651911446297.jpg">
+                    <p>Tình hình dịch covid ngày gia tăng khiến cho các bệnh viện tuyến tỉnh đến trung ương ngày cảng
+                        quá tải</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-8">
+            <h3 class="centerr">TIN CHUNG</h3>
+            <div class="container p-2 my-2 border">
+                <div class="container-fluid">
+                    <div class="row">
+                        <img class="imgRow-2 col-sm-4"  src="https://ichef.bbci.co.uk/news/640/cpsprodpb/FE4C/production/_113800156_bvdanang.jpg">
+                        <p class="col-sm-8">Phòng khám Q&L thực hiện khám bệnh và thu thập các mãu bệnh, cứu trợ và đưa các vật dụng đến với các bệnh nhân mùa dịch!</p>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <img class="imgRow-2 col-sm-4"  src="https://www.fda.gov/files/styles/main_image_1/public/COVID%20testing%20policy_1600x900_0.png?itok=LDHrpWTi">
+                        <p class="col-sm-8"> Bộ Y tế tổ chức lễ phát động Chiến dịch truyền thông phòng, chống dịch COVID-19 trong
+                            tình hình mới với chủ đề “Vì một Việt Nam vững vàng và khỏe mạnh”.</p>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <img class="imgRow-2 col-sm-4"  src="https://tamanhhospital.vn/wp-content/uploads/2022/03/di-chung-hau-covid-19.jpg">
+                        <p class="col-sm-8">V0 đã khỏi bệnh vẫn có thể gặp hàng loạt triệu chứng và di chứng hậu Covid-19 kéo dài từ 2-6 tháng như:
+                            sốt, ho, khó thở, mệt mỏi, tim đập nhanh, đau cơ bắp, rụng tóc, rối loạn nội tiết… Một số triệu chứng có thể tự khỏi, một
+                            số biến chứng sau khi khỏi Covid trở nặng phải nhập viện điều trị, gây ảnh hưởng sức khỏe và tài chính.</p>
+                    </div>
+                    <br>
+                    <div class="row">
+                        <img class="imgRow-2 col-sm-4"  src="https://covid19.qltns.mediacdn.vn/Images/duylinh/2020/08/18/T4_Bai_A_-6_bc_ra_tay_ung_cach.png">
+                        <p class="col-sm-8">Theo Tổ chức Y tế Thế giới (WHO), chỉ một động tác rửa tay sạch đã làm giảm tới 35% khả năng lây truyền vi khuẩn. Trước tình hình đại dịch COVID-19,
+                            Bộ Y tế cũng khuyến cáo thường xuyên rửa tay với xà phòng/xà bông/dung dịch rửa tay nhanh và nước sạch hoặc dung dịch rửa tay có cồn là biện pháp phòng ngừa đơn
+                            giản nhưng hiệu...</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
