--- a/appClinics/templates/layout/header.html
+++ b/appClinics/templates/layout/header.html
@@ -49,9 +49,15 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/">Trang chủ</a>
                 </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="clinic1">Giới thiệu</a>
+                </li>
+
                 <li class="nav-item">
                     <a class="nav-link" href="appointment">Đăng ký khám</a>
                 </li>
+
 
             </ul>
             {% if current_user.is_authenticated %}
@@ -72,6 +78,9 @@
                 </a>
             </form>
             {% endif %}
+
+
+
         </div>
     </div>
 </nav>
