--- a/appClinics/templates/layout/header.html
+++ b/appClinics/templates/layout/header.html
@@ -52,6 +52,11 @@
                 <li class="nav-item">
                     <a class="nav-link" href="appointment">Đăng ký khám</a>
                 </li>
+                {% if current_user.is_authenticated and current_user.role.name == 'NURSE'%}
+                <li class="nav-item">
+                    <a class="nav-link" href="listapm">Lập danh sách khám</a>
+                </li>
+                {% endif %}
 
             </ul>
             {% if current_user.is_authenticated %}
