--- a/appClinics/templates/layout/register.html
+++ b/appClinics/templates/layout/register.html
@@ -34,7 +34,7 @@
 
 
         {% endfor %}
-        <button type="submit" class="btn btn-primary col-sm-3">Submit</button>
+        <button type="submit" class="btn btn-primary col-sm-2 rounded-pill">Submit</button>
     </form>
 
 </div>
