--- a/appClinics/templates/layout/header.html
+++ b/appClinics/templates/layout/header.html
@@ -34,53 +34,57 @@
 <!--      </div>-->
 <!--</div>-->
 <!--&lt;!&ndash;/HinhTrangChu&ndash;&gt;-->
+<div class="sticky">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="javascript:void(0)">
+                <img src="https://www.popsockets.com/dw/image/v2/BFSM_PRD/on/demandware.static/-/Sites-popsockets-master-catalog/default/dwe2c701b7/images/hi-res/5-i7vuzMeHQppWgEYf-OMSFront1.png?sw=800&sh=800"
+                     alt="Avatar Logo" style="width:40px;" class="rounded-pill"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="mynavbar">
 
-<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="javascript:void(0)">
-            <img src="https://www.popsockets.com/dw/image/v2/BFSM_PRD/on/demandware.static/-/Sites-popsockets-master-catalog/default/dwe2c701b7/images/hi-res/5-i7vuzMeHQppWgEYf-OMSFront1.png?sw=800&sh=800"
-                 alt="Avatar Logo" style="width:40px;" class="rounded-pill"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="mynavbar">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/">Trang chủ</a>
+                    </li>
 
-            <ul class="navbar-nav me-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="/">Trang chủ</a>
-                </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="generalExamination">Khám tổng quát</a>
+                    </li>
 
-                <li class="nav-item">
-                    <a class="nav-link" href="clinic1">Giới thiệu</a>
-                </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="price">Bảng giá</a>
+                    </li>
 
-                <li class="nav-item">
-                    <a class="nav-link" href="appointment">Đăng ký khám</a>
-                </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="appointment">Đăng ký khám</a>
+                    </li>
 
 
-            </ul>
-            {% if current_user.is_authenticated %}
-            <div class="dropdown">
-                <button type="button" class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown">
-                    {{current_user.name}}
-                    <img src={{current_user.avatar}} class="rounded-circle " height="50" width="50">
-                </button>
-                <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="/logout">Log out</a></li>
-                    <li><a class="dropdown-item" href="#">Setting</a></li>
                 </ul>
+                {% if current_user.is_authenticated %}
+                <div class="dropdown">
+                    <button type="button" class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown">
+                        {{current_user.name}}
+                        <img src={{current_user.avatar}} class="rounded-circle " height="50" width="50">
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="/logout">Log out</a></li>
+                        <li><a class="dropdown-item" href="#">Setting</a></li>
+                    </ul>
+                </div>
+                {% else %}
+                <form class="d-flex">
+                    <a href="login">
+                        <button class="btn btn-primary" type="button">Đăng nhập</button>
+                    </a>
+                </form>
+                {% endif %}
+
+
             </div>
-            {% else %}
-            <form class="d-flex">
-                <a href="login">
-                    <button class="btn btn-primary" type="button">Đăng nhập</button>
-                </a>
-            </form>
-            {% endif %}
-
-
-
         </div>
-    </div>
-</nav>
+    </nav>
+</div>
