--- a/appClinics/templates/layout/footer.html
+++ b/appClinics/templates/layout/footer.html
@@ -1,43 +1,64 @@
+<br>
+<div class="container pt5 border-top">
+    <div class="container mt-5">
 
-<div class="mt-4 p-5 bg-primary text-white rounded">
-  <h1>E-commerce Website</h1>
-  <e>Duong Huu Thanh &copy; 2022</e>
-</div>
+        <div class="row">
 
+            <div class="col-sm-4">
+                Địa chỉ: Số 371, đường Nguyễn Kiệm, Quận Gò Vấp, Thành Phố Hồ Chí Minh
+                <br>
+                Điện thoại: 052 588 8985
+            </div>
 
-<!--LuanChinh-->
-<div class="social-button">
-    <div class="social-button-content">
-                    <!--Phone-->
-       <a href="tel:0981481368" class="call-icon" rel="nofollow">
-          <i class="fa-solid fa-phone"></i>
-          <div class="animated alo-circle"></div>
-          <div class="animated alo-circle-fill  "></div>
-           <span>Hotline: 098 148 1368</span>
-        </a>
-                    <!--SMS-->
-        <a href="sms:0981481368" class="sms">
-          <i class="fa-solid fa-comment-sms"></i>
-          <span>SMS: 098 148 1368</span>
-        </a>
-                    <!--FaceBook-->
-        <a href="https://www.facebook.com/profile.php?id=100021566813698" class="mes">
-          <i class="fa-brands fa-facebook"></i>
-          <span>Nhắn tin Facebook</span>
-        </a>
-                <!--Github-->
-    <a class="user-support">
-      <i class="fa-brands fa-github"></i>
-      <div class="animated alo-circle"></div>
-      <div class="animated alo-circle-fill"></div>
-    </a>
-  </div>
+            <div class="col-sm-4">
+
+            </div>
+            <div class="col-sm-4">
+                <p class="Fontt">Phòng khám &copy; 2022</p>
+            </div>
+
+        </div>
+    </div>
+    <br>
 
 
-  <script>
+    <!--LuanChinh-->
+    <div class="social-button">
+        <div class="social-button-content">
+            <!--Phone-->
+            <a href="tel:0981481368" class="call-icon" rel="nofollow">
+                <i class="fa-solid fa-phone"></i>
+                <div class="animated alo-circle"></div>
+                <div class="animated alo-circle-fill  "></div>
+                <span>Hotline: 098 148 1368</span>
+            </a>
+            <!--SMS-->
+            <a href="sms:0981481368" class="sms">
+                <i class="fa-solid fa-comment-sms"></i>
+                <span>SMS: 098 148 1368</span>
+            </a>
+            <!--FaceBook-->
+            <a href="https://www.facebook.com/profile.php?id=100021566813698" class="mes">
+                <i class="fa-brands fa-facebook"></i>
+                <span>Nhắn tin Facebook</span>
+            </a>
+            <!--Github-->
+            <a class="user-support">
+                <i class="fa-brands fa-github"></i>
+                <div class="animated alo-circle"></div>
+                <div class="animated alo-circle-fill"></div>
+            </a>
+        </div>
+
+
+        <script>
   $(document).ready(function(){
     $('.user-support').click(function(event) {
       $('.social-button-content').slideToggle();
     });
     });
-</script>
+
+
+
+
+        </script>
