--- a/appClinics/templates/layout/header.html
+++ b/appClinics/templates/layout/header.html
@@ -35,7 +35,7 @@
 <!--</div>-->
 <!--&lt;!&ndash;/HinhTrangChu&ndash;&gt;-->
 <div class="sticky">
-    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-info">
         <div class="container-fluid">
             <a class="navbar-brand" href="javascript:void(0)">
                 <img src="https://www.popsockets.com/dw/image/v2/BFSM_PRD/on/demandware.static/-/Sites-popsockets-master-catalog/default/dwe2c701b7/images/hi-res/5-i7vuzMeHQppWgEYf-OMSFront1.png?sw=800&sh=800"
