--- a/appClinics/templates/index.html
+++ b/appClinics/templates/index.html
@@ -13,7 +13,7 @@
                     <div class="container p-3 my-3 border">
                         <img class="imgRow"
                              src="https://xdcs.cdnchinhphu.vn/thumb_w/900/446259493575335936/2022/9/8/covid-19-16626080762101926255717-28-0-1028-1600-crop-16626086747651911446297.jpg">
-                        <e>Tình hình dịch covid ngày gia tăng khiến cho các bệnh viện tuyến tỉnh đến trung ương ngày cảng
+                        <e *>Tình hình dịch covid ngày gia tăng khiến cho các bệnh viện tuyến tỉnh đến trung ương ngày cảng
                             quá tải</e>
                     </div>
                 <div class="container p-3 my-3 border">
