page lap ds kham

--- a/appClinics/templates/index.html
+++ b/appClinics/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="clinic1-img">
-    <img src="http://benhvientinh.quangtri.gov.vn/uploads/photos/images/2017/06/hinh-anh-benh-vien-tinh/img-4703.jpg">
+    <img src="https://scontent.fsgn5-9.fna.fbcdn.net/v/t1.15752-9/314982348_1199689237611134_700159305276222791_n.png?_nc_cat=102&ccb=1-7&_nc_sid=ae9488&_nc_ohc=YuY5_x6AuQ0AX-3_cEJ&tn=ft1BJHuSwEZFZulI&_nc_ht=scontent.fsgn5-9.fna&oh=03_AdQxdendVWPeIDB7TaKCFAi1_wfIY1L9DoZvitFp29Vo8Q&oe=63B81A0F">
 </div>
 
 <div class="container mt-5">
