--- a/appClinics/templates/layout/header.html
+++ b/appClinics/templates/layout/header.html
@@ -41,7 +41,7 @@
                 </ul>
                 {% if current_user.is_authenticated %}
                 <div class="dropdown">
-                    <button type="button" class="btn btn-dark dropdown-toggle" data-bs-toggle="dropdown">
+                    <button type="button" class="btn btn-info dropdown-toggle" data-bs-toggle="dropdown">
                         {{current_user.name}}
                         <img src={{current_user.avatar}} class="rounded-circle " height="50" width="50">
                     </button>
