--- a/appClinics/templates/layout/header.html
+++ b/appClinics/templates/layout/header.html
@@ -53,7 +53,7 @@
                 {% else %}
                 <form class="d-flex">
                     <a href="login">
-                        <button class="btn btn-primary" type="button">Đăng nhập</button>
+                        <button class="btn btn-light" type="button">Đăng nhập</button>
                     </a>
                 </form>
                 {% endif %}
