--- a/appClinics/templates/listapm.html
+++ b/appClinics/templates/listapm.html
@@ -8,10 +8,55 @@
 
             <label for="date_apm"> Ngày khám :</label>
             <input type="date" id="date_apm" name="birthday" value={{date}}>
-            <button type="button" class="btn btn-sm btn-primary rounded-pill">Tạo danh sách khám</button>
+            <button type="button" class="btn btn-sm btn-primary rounded-pill" data-bs-toggle="modal"
+                    data-bs-target="#myModal" onclick="set_modal_date()">Tạo danh sách khám
+            </button>
         </div>
 
     </form>
+    <div class="modal " id="myModal">
+        <div class="modal-dialog modal-xl modal-dialog-centered">
+            <div class="modal-content ">
+                <div class="mb-3">
+                    <div class="p-3"></div>
+                    <div class="col-sm-12 border border-3 d-flex justify-content-center ">DANH SÁCH KHÁM BỆNH</div>
+                    <div class="col-sm-12 border border-3 d-flex justify-content-center " id="modal-date"></div>
+                    <table class="table table-bordered">
+                        <thead>
+                        <tr>
+                            <th>STT</th>
+                            <th>{{user_atb['name']}}</th>
+                            <th>{{user_atb['gender']}}</th>
+                            <th>Năm sinh</th>
+                            <th>{{user_atb['address']}}</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% set idx = namespace(c = 1) %}
+                        {% for user in users %}
+                        {% if user.legit == True %}
+                        <tr>
+                            <td>{{idx.c}}</td>
+                            {% set idx.c = idx.c + 1 %}
+                            <td>{{user['name']}}</td>
+                            <td>{{user['gender'].name}}</td>
+                            <td>{{user['birthday'].year}}</td>
+                            <td>{{user['address']}}</td>
+                        </tr>
+                        {% endif %}
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                    <div class="p-3">
+                        <button type="button" class="btn btn-danger float-start" data-bs-dismiss="modal">Cancle</button>
+                        <button type="button" class="btn btn-success float-end">Xác nhận</button>
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+    </div>
     <form action="/listapm" method="post">
         <table class="table table-bordered">
             <thead>
