--- a/appClinics/templates/layout/header.html
+++ b/appClinics/templates/layout/header.html
@@ -1,5 +1,3 @@
-
-
 <div class="sticky">
     <nav class="navbar navbar-expand-sm navbar-dark bg-info">
         <div class="container-fluid">
@@ -14,28 +12,32 @@
 
                 <ul class="navbar-nav me-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="/">Trang chủ</a>
+                        <a class="nav-link active" href="/">Trang chủ</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="generalExamination">Khám tổng quát</a>
+                        <a class="nav-link active" href="generalExamination">Khám tổng quát</a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="price">Bảng giá</a>
+                        <a class="nav-link active" href="price">Bảng giá</a>
                     </li>
 
 
-
-                <li class="nav-item">
-                    <a class="nav-link" href="appointment">Đăng ký khám</a>
-                </li>
-                {% if current_user.is_authenticated and current_user.role.name == 'NURSE'%}
-                <li class="nav-item">
-                    <a class="nav-link" href="listapm">Lập danh sách khám</a>
-                </li>
-                {% endif %}
-
+                    <li class="nav-item">
+                        <a class="nav-link active" href="appointment">Đăng ký khám</a>
+                    </li>
+                    {% if current_user.is_authenticated %}
+                    {% if current_user.role.name == 'NURSE' %}
+                    <li class="nav-item">
+                        <a class="nav-link active" href="apms">Lập danh sách khám</a>
+                    </li>
+                    {% elif current_user.role.name == 'DOCTOR'%}
+                    <li class="nav-item">
+                        <a class="nav-link active" href="medicalrp">Lập phiếu khám</a>
+                    </li>
+                    {% endif %}
+                    {% endif %}
 
 
                 </ul>
