--- a/appClinics/templates/nurse/apms.html
+++ b/appClinics/templates/nurse/apms.html
@@ -111,7 +111,7 @@
         <!--        <button type="submit" class="btn btn-primary float-end rounded-pill">Tạo danh sách</button>-->
 
 
-        <button type="button" onclick="ab()" class="btn btn-info">Danh sách thông tin nghi vấn</button>
+        <button type="button" onclick="legitbtn()" class="btn btn-info">Danh sách thông tin nghi vấn</button>
 
         <table class="table table-bordered" id="tb-non-legit" style="display:none">
             <thead>
