--- a/appClinics/templates/nurse/apms.html
+++ b/appClinics/templates/nurse/apms.html
@@ -13,7 +13,7 @@
                             <table class="table table-bordered">
                                 <thead>
                                 <tr>
-                                    <th>STT</th>
+                                    <th >STT</th>
                                     <th>{{user_atb['name']}}</th>
                                     <th>{{user_atb['gender']}}</th>
                                     <th>Năm sinh</th>
@@ -79,13 +79,13 @@
             <thead>
             <tr>
                 <!--          <th>#</th>-->
-                <th>{{user_atb['name']}}</th>
-                <th>{{user_atb['birthday']}}</th>
-                <th>{{user_atb['gender']}}</th>
-                <th>{{user_atb['address']}}</th>
-                <th>{{user_atb['CCCD']}}</th>
-                <th>{{user_atb['phone']}}</th>
-                <th>Thông tin giả</th>
+                <th class="text-center">{{user_atb['name']}}</th>
+                <th class="text-center">{{user_atb['birthday']}}</th>
+                <th class="text-center">{{user_atb['gender']}}</th>
+                <th class="text-center">{{user_atb['address']}}</th>
+                <th class="text-center">{{user_atb['CCCD']}}</th>
+                <th class="text-center">{{user_atb['phone']}}</th>
+                <th class="text-center">Thông tin giả</th>
             </tr>
             </thead>
             <tbody>
@@ -99,8 +99,8 @@
                 <td>{{user['address']}}</td>
                 <td>{{user['CCCD']}}</td>
                 <td>{{user['phone']}}</td>
-                <td>
-                    <input type="checkbox" class="form-check-input mx-auto " name="data_fake" }
+                <td class="text-center">
+                    <input type="checkbox" class="form-check-input mx-auto"  name="data_fake" }
                            value={{user['id']}}>
                 </td>
             </tr>
@@ -117,13 +117,13 @@
             <thead>
             <tr>
                 <!--          <th>#</th>-->
-                <th>{{user_atb['name']}}</th>
-                <th>{{user_atb['birthday']}}</th>
-                <th>{{user_atb['gender']}}</th>
-                <th>{{user_atb['address']}}</th>
-                <th>{{user_atb['CCCD']}}</th>
-                <th>{{user_atb['phone']}}</th>
-                <th>Xác nhận</th>
+                <th class="text-center">{{user_atb['name']}}</th>
+                <th class="text-center">{{user_atb['birthday']}}</th>
+                <th class="text-center">{{user_atb['gender']}}</th>
+                <th class="text-center">{{user_atb['address']}}</th>
+                <th class="text-center">{{user_atb['CCCD']}}</th>
+                <th class="text-center">{{user_atb['phone']}}</th>
+                <th class="text-center">Xác nhận</th>
             </tr>
             </thead>
             <tbody>
