--- a/appClinics/templates/layout/register.html
+++ b/appClinics/templates/layout/register.html
@@ -1,5 +1,5 @@
 <div>
-    <h2 style="color : #0E8D68" > THÔNG TIN ĐĂNG KÝ KHÁM </h2>
+    <h2 class="text-center" style="color : #0E8D68" > THÔNG TIN ĐĂNG KÝ KHÁM </h2>
     <form method="post" action="/appointment" class="row form-row">
         {% for key,value in user_atb.items() %}
 
@@ -14,7 +14,7 @@
                     <input type="radio" class="form-check-input" id="female" name={{key}} value="FEMALE">
                     <label class="form-check-label" for="female">Nữ</label>
                 </div>
-                <div class="form-check col-sm-4">
+                <div class="form-check col-sm-4 ">
                     <input type="radio" class="form-check-input" id="other" name={{key}} value="OTHER">
                     <label class="form-check-label" for="other">Khác</label>
                 </div>
