bsi lap phieu, tra cuu, js, index

--- a/appClinics/static/css/style.css
+++ b/appClinics/static/css/style.css
@@ -199,4 +199,6 @@ e:active{
     .table-bordered > tbody > tr > td{
     border:2px solid black!important;
     }
-
+.medical {
+    margin-top : 0;
+}
