--- a/appClinics/templates/layout/header.html
+++ b/appClinics/templates/layout/header.html
@@ -36,6 +36,9 @@
                     <li class="nav-item">
                         <a class="nav-link active" href="medicalrp">Lập phiếu khám</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="medicine">Tra cứu thuốc</a>
+                    </li>
                     {% endif %}
                     {% endif %}
 
