--- a/appClinics/templates/doctor/medicalrp.html
+++ b/appClinics/templates/doctor/medicalrp.html
@@ -8,11 +8,11 @@
 </div>
 <div class="report-area">
     <div class="container p-3 row">
-        <div class="d-flex justify-content-center border border-dark"> PHIẾU KHÁM BỆNH</div>
-        <div class="border border-dark col-sm-6 p-3">Họ tên:</div>
-        <div class="border border-dark col-sm-6 p-3">Ngày khám:</div>
+        <div class="d-flex justify-content-center border border-dark "> PHIẾU KHÁM BỆNH </div>
+        <div class="border border-dark col-sm-6 p-3">Họ tên: </div>
+        <div class="border border-dark col-sm-6 p-3">Ngày khám: </div>
         <div class="border border-dark col-sm-6 p-3">
-            <label for="hint">Triệu chứng</label>
+            <label for="hint">Triệu chứng: </label>
             <input type="text" class="form-control" id="hint">
         </div>
         <div class="border border-dark col-sm-6 p-3">
@@ -23,11 +23,11 @@
             <thead>
             <tr>
                 <!--          <th>#</th>-->
-                <th>STT</th>
-                <th>Thuốc</th>
-                <th>Đơn vị</th>
-                <th>Số lượng</th>
-                <th>Cách dùng</th>
+                <th class="text-center">STT</th>
+                <th class="text-center">Thuốc</th>
+                <th class="text-center">Đơn vị</th>
+                <th class="text-center">Số lượng</th>
+                <th class="text-center">Cách dùng</th>
             </tr>
             </thead>
             <tbody>
