--- a/appClinics/templates/layout/footer.html
+++ b/appClinics/templates/layout/footer.html
@@ -1,4 +1,3 @@
-
 <br>
 <div class="container pt5 border-top">
     <div class="container mt-5">
@@ -50,9 +49,9 @@
                 <div class="animated alo-circle-fill"></div>
             </a>
         </div>
-
-
-        <script>
+    </div>
+</div>
+<script>
 
   $(document).ready(function(){
     $('.user-support').click(function(event) {
@@ -60,4 +59,8 @@
     });
     });
 
+
+
+
 </script>
+
