--- a/appClinics/templates/doctor/medicine.html
+++ b/appClinics/templates/doctor/medicine.html
@@ -1,9 +1,21 @@
-
 <div class="search-area">
     <div class=" d-flex p-3 justify-content-center">
         <input type="text" class="form-control col-sm-4" placeholder="Nhập tên thuốc, triệu chứng..." id="kw-medicine">
-        <button type="button" class="btn btn-info" onclick="getMedicine()">Tìm kiếm</button>
+        <button type="button" class="btn btn-info" onclick="getMedicine(0)">Tìm kiếm</button>
     </div>
-    <div class=" d-flex justify-content-center" id="search-rs">
+    <div class=" d-flex justify-content-center" id="medicine-rs">
+        <i id="no-rs" style="display:none">Không tìm thầy kết quả</i>
+        <table class="table table-hover"  id="table-medicine" style="display:none">
+            <thead>
+            <tr id="title-medicine">
+                <th>Tên</th>
+                <th>Giá</th>
+                <th>Đơn vị</th>
+            </tr>
+            </thead>
+            <tbody id="medicine-item">
+
+            </tbody>
+        </table>
     </div>
 </div>
