--- a/appClinics/templates/layout/footer.html
+++ b/appClinics/templates/layout/footer.html
@@ -1,5 +1,8 @@
 <br>
-<div class="container pt5 border-top">
+<div class="container pt5">
+    <div class="container">
+    <p class="border-top border-2"></p>
+    </div>
     <div class="container mt-5">
 
         <div class="row">
