--- a/appClinics/templates/doctor/medicalrp.html
+++ b/appClinics/templates/doctor/medicalrp.html
@@ -8,6 +8,7 @@
 </div>
 <div class="report-area p-3" style="display:none">
     <button type="button" class="btn btn-info col-sm-3 btn-sm">Lịch sử khám bệnh</button>
+    <button type="button" class="btn btn-info col-sm-3 btn-sm">Tạo phiếu khám</button>
     <div class="container p-3 row">
 
         <div class="d-flex justify-content-center border border-dark"> PHIẾU KHÁM BỆNH</div>
